--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
     <button class="btn-primary" (click)="Show()">Enter</button>
 </form> -->
 
-
+<!-- 
 <form action="" [formGroup]="test">
     <div formArrayName="mobile">
         <div *ngFor="let m of test.get('mobile')['controls'];let i=index"> 
@@ -41,4 +41,29 @@
         </div>
     </div>
 </form>
-<button class="btn-primary" (click)="Add()">Enter</button>
+<button class="btn-primary" (click)="Add()">Enter</button> -->
+
+
+
+<!-- <form [formGroup]="reg">
+    Name:
+    <input type="text" class="form-control" formControlName="nname">
+    Email:
+    <input type="email" class="form-control" formControlName="eemail">
+    
+    <div formArrayName="mmobile">
+        <ng-container *ngFor="let m of this.reg.get('mmobile')['controls'];let i=index">
+            Mobile {{i+1}}<input type="number" class="form-control"  formControlName="{{i}}">
+        </ng-container>
+    </div>
+
+</form> -->
+
+
+<form action="" [formGroup]="register">
+    Class:
+    <input type="text" class="form-control" formControlName="classes">
+    <p class="error-msg" *ngIf="this.register.get('classes').touched && this.register.get('classes').errors?.['duliclass']">Class exist</p>
+    <button (click)="Show()"></button>
+
+</form>
