--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,4 +69,10 @@
 </form> -->
 
 <!-- <app-template-form></app-template-form> -->
-<app-reactive-form></app-reactive-form>
+
+<!-- <input type="text" [(ngModel)]="mobiles">
+
+<button (click)="addMobile()">Send</button>
+<button (click)="deleteMobile()">delete</button>
+<app-check [mobile]="mList" ></app-check> -->
+<app-sample></app-sample>
